k8s-deploy/qa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sp-catalog-qa
    app.kubernetes.io/instance: sp-catalog-qa-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: sp-catalog-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sp-catalog-qa
  template:
    metadata:
      labels:
        app: sp-catalog-qa
    spec:
      containers:
        - image: 746460560240.dkr.ecr.ap-south-1.amazonaws.com/seller-portal-qa:catalog-service-qa-latest
          imagePullPolicy: Always
          name: sp-catalog-qa
          ports:
            - containerPort: 8081
