k8s-deploy/qa/redis-external-service.yml
apiVersion: v1
kind: Service
metadata:
   name: sp-catalog-qa
spec: 
   type: ExternalName
   externalName: sp-catalog-qa-redis-ro.clveb8.ng.0001.aps1.cache.amazonaws.com
